@@ -1,7 +1,9 @@
 unreleased changes
 ==================
 
--moved IWindsorInstaller to Castle.MicroKernel.Registration namespace
+- ServiceSelector delegate (used in WithService.Select calls) changed signature to fix a bug: http://3.ly/eP5Q
+
+- moved IWindsorInstaller to Castle.MicroKernel.Registration namespace
 
 - typed factories will now obey container release policy, that is if the container does not track the component, so won't the factory.
 
